8205608: Fix 'frames()' in ThreadReferenceImpl.c to prevent quadratic runtime behavior

Reviewed-by: sspitsyn, cjplummer